Fixes for match result rendering

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,7 +55,7 @@ body{
 .logo{
 	font-family: Roboto, sans-serif;
 	font-weight: 100;
-	color:#111;
+	color:#58616E;
 	margin-bottom: 350px;
 	font-size: 80px;
 	transition: all .3s ease;
@@ -72,9 +72,9 @@ body{
 	/*min-width: 400px;*/
 	max-width: 100%;
 	border-radius:10px;
-	background: rgba(0,0,0,.03);
+	background: rgba(88,97,110,.03);
 	outline:0;
-	box-shadow: 0 0 8px rgba(100,100,100,.3);
+	box-shadow: 0 0 8px rgba(245, 106, 106,.3);
 }
 
 .form-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
@@ -156,13 +156,24 @@ body{
 }
 
 .music-wrapper{
-	background: rgba(47,52,59,.8);
 	height: 100%;
 	padding:10px 20px;
 }
 
+.music-block:nth-child(even) .music-wrapper{
+	background: rgba(88,97,110,.6);
+}
+
+.music-block:nth-child(odd) .music-wrapper{
+	background: rgba(88,97,110,.8);
+}
+
+.music-block .music-wrapper:hover{
+	background: rgba(88,97,110,.3);
+}
+
 .music-content{
-	color:white;
+	color:#F0FCFF;;
 	text-align: left;
 	float:left;
 	font-family: Roboto, sans-serif;
